k8s/base/services/registry/deployment-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: registry
  name: registry-ui-proxy
  labels:
    app: registry-ui-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui-proxy
  template:
    metadata:
      labels:
        app: registry-ui-proxy
    spec:
      shareProcessNamespace: true
      containers:
        - image: nginx:1.28.0-alpine
          name: registry-ui-proxy
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources: {}
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: nginx-conf
          configMap:
            name: registry-ui-proxy-config
---
kind: Service
apiVersion: v1
metadata:
  name: registry-ui-proxy
  namespace: registry
spec:
  selector:
    app: registry-ui-proxy
  ports:
    - port: 80
