k8s/base/services/registry/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: registry
  name: registry-ui
  labels:
    app: registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - image: joxit/docker-registry-ui:2.5.7
          name: registry-ui
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources: {}
---
kind: Service
apiVersion: v1
metadata:
  name: registry-ui
  namespace: registry
spec:
  selector:
    app: registry-ui
  ports:
    - port: 80
