k8s/base/services/registry/deployment.yaml
# /var/lib/registry
# REDIS_ADDRS_0=service
# HTTP_SECRET=secret
# LOG_HOOKS_0_OPTIONS_SMTP_PASSWORD=
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: registry
  name: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - image: registry:3
          name: registry
          # livenessProbe:
          #   httpGet:
          #     path: /_status/healthz
          #     port: 5000
          #   initialDelaySeconds: 90
          #   timeoutSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /_status/healthz
          #     port: 5000
          #   initialDelaySeconds: 30
          #   timeoutSeconds: 10
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-config
              mountPath: /etc/distribution/config.yml
              subPath: config.yml
            - name: registry-secrets
              mountPath: /etc/distribution/certbundle.pem
              subPath: keycloakPublicKey
            - name: registry-config
              mountPath: /etc/distribution/jwks.json
              subPath: jwks.json
            - name: registry-data
              mountPath: /var/lib/registry
      volumes:
        - name: registry-data
          persistentVolumeClaim:
            claimName: registry-data
        - name: registry-config
          configMap:
            name: registry-config
        - name: registry-secrets
          secret:
            secretName: registry-secrets

---
kind: Service
apiVersion: v1
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    app: registry
  ports:
    - port: 5000
